feat: spawn the native cs-ide binary instead of java -jar
JAR+AOT did not beat native on a quiet 4-vCPU Windows runner for
startup, memory, or typical review batches, so package and launch
the Graal binary.